Mejoras en el comportamiento responsive

--- a/src/components/PokemonCard/PokemonCard.module.scss
+++ b/src/components/PokemonCard/PokemonCard.module.scss
@@ -8,10 +8,40 @@
     grid-gap: 1px;
     background-color: $color-black1;
 
+    @media (max-width: 768px) {
+        display: flex;
+        flex-direction: column;
+        border: none;
+        background-color: $color-white1;
+        margin-bottom: 20px;
+        border: 1px solid $color-black1;
+        padding-bottom: 20px;
+    }
+
     .pokemon__item {
         display: flex;
         justify-content: center;
         background-color: $color-white1;
+        align-items: center;
+
+        @media (max-width: 768px) {
+            border-bottom: 1px solid $color-black1;
+
+            &:last-child {
+                margin-top: 15px;
+                border-bottom: none;
+            }
+        }
+
+        .pokemon__item--title {
+            display: none;
+
+            @media (max-width: 768px) {
+                display: flex;
+                width: 50%;
+                justify-content: center;
+            }
+        }
 
         .pokemon__item--label {
             align-items: center;
@@ -20,11 +50,24 @@
             display: flex;
             font-size: 18px;
             font-weight: normal;
+
+            @media (max-width: 768px) {
+                width: 50%;
+                justify-content: center;
+            }
         }
 
         .pokemon__item--image {
-            width: 100px;
-            height: 100px;
+            @media (max-width: 768px) {
+                display: flex;
+                width: 50%;
+                justify-content: center;
+            }
+
+            .image {
+                width: 100px;
+                height: 100px;
+            }
         }
 
         .pokemon__item--actions {
@@ -33,6 +76,10 @@
             align-items: center;
             padding: 0 15px;
             justify-content: center;
+
+            @media (max-width: 768px) {
+                width: 50%;
+            }
 
             .action {
                 width: 20px;
