--- a/src/components/PokemonForm/PokemonForm.module.scss
+++ b/src/components/PokemonForm/PokemonForm.module.scss
@@ -15,6 +15,15 @@
     flex-direction: column;
     background-color: $color-white1;
 
+    @media(max-width: 768px) {
+        top: 0;
+        left: 0;
+        transform: none;
+        width: 100%;
+        height: 100%;
+        padding: 30px 0;
+    }
+
     .form__title {
         align-items: center;
         color: $color-black1;
@@ -35,13 +44,26 @@
         align-items: center;
         justify-content: center;
 
+        @media(max-width: 768px) {
+            flex-direction: column;
+        }
+
         .form__controls--column {
             display: flex;
             flex-direction: column;
             width: 30%;
 
+            @media(max-width: 768px) {
+                width: 70%;
+            }
+
             &:first-child {
                 margin-right: 180px;
+
+                @media(max-width: 768px) {
+                    margin-right: 0;
+                    margin-bottom: 20px;
+                }
             }
 
             .control {
